--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Write Against the Machine</title>
 </head>
-<script src="voting-mode.js"></script>
 <body>
     <header>
         <h1>Write Against the Machine</h1>
         <div id="login">
-            <!-- Insert the social media or Google login integration here -->
+            <!-- No user login system required for participation -->
         </div>
     </header>
     <section id="intro">
-        <p>Poetry is one of the highest forms of human expression. Or is it? Test your skills against our ai scribe. Or play the critic and see if you prefer your poetry handcrafted or machine-made.</p>
+        <p>Poetry is one of the highest forms of human expression. Or is it? Test your skills against our AI scribe. Or play the critic and see if you prefer your poetry handcrafted or machine-made.</p>
     </section>
     <section id="mode-selection">
         <a href="writing-mode.html"><button id="writing-mode">Compose</button></a>
@@ -25,7 +24,6 @@
     <footer>
         <p>&copy; 2023 Write Against the Machine</p>
     </footer>
-    <script src="writing-mode.js"></script>
-    <script src="voting-mode.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
