--- a/writing-mode.html
+++ b/writing-mode.html
@@ -23,8 +23,7 @@
   <section id="intro">
     <p>Below you will find five words. You must compose a poem using all five of these words. Bonus points for using proper poetry forms in your composition.</p>
   </section>
-  <div>
-    <ul id="random-words-container"></ul>
+  <div id="random-words-container">
   </div>
   <section id="user-poem">
     <form>
