--- a/writing-mode.html
+++ b/writing-mode.html
@@ -38,7 +38,7 @@
       <label for="poem-text">Poem:</label>
       <textarea id="poem-text" name="poem-text" required></textarea>
       <br />
-      <button type="submit">Submit</button>
+      <button type="submit" id="submit-button">Submit</button>
     </form>
   </section>
   <div id="loading-spinner" style="display:none;">
