--- a/writing-mode.html
+++ b/writing-mode.html
@@ -23,7 +23,7 @@
   <section id="intro">
     <p>Below you will find five words. You must compose a poem using all five of these words. Bonus points for using proper poetry forms in your composition.</p>
   </section>
-  <div id="random-words-container"></div>
+  <div id="random-words-container"><p id="randomwords"></p></div>
   <section id="user-poem">
     <form>
       <label for="poem-title">Title:</label>
