--- a/writing-mode.html
+++ b/writing-mode.html
@@ -29,28 +29,29 @@
       <label for="poem-title">Title:</label>
       <input type="text" id="poem-title" name="poem-title" required />
       <br />
+      <label for="poem-text">Poem:</label>
+      <textarea id="poem-text" name="poem-text" required></textarea>
+      <br />
       <label for="author-name">Author:</label>
       <input type="text" id="author-name" name="author-name" required />
       <br />
       <label for="poem-url">URL:</label>
       <input type="url" id="poem-url" name="poem-url" />
       <br />
-      <label for="poem-text">Poem:</label>
-      <textarea id="poem-text" name="poem-text" required></textarea>
-      <br />
-      <button type="submit" id="submit-button">Submit</button>
+      <button type="submit" id="submit-button" onclick="handleSubmit(event)">Submit</button>
     </form>
   </section>
   <div id="loading-spinner" style="display:none;">
     <div class="spinner"></div>
   </div>
-  <section id="ai-poem" style="display:none;">
-    <p id="ai-generated-poem"></p>
-    <p id="ai-critic-review"></p>
+  <section id="poems-container">
+    <div id="user-poem" class="poem"></div>
+    <div id="ai-poem" class="poem"></div>
   </section>
+  
   <footer>
     <p>&copy; 2023 Write Against the Machine</p>
   </footer>
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
