--- a/writing-mode.html
+++ b/writing-mode.html
@@ -52,6 +52,6 @@
   <footer>
     <p>&copy; 2023 Write Against the Machine</p>
   </footer>
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
